#2 | НУ и модал поправил